--- a/templates/short_url/short_url.html
+++ b/templates/short_url/short_url.html
@@ -34,6 +34,14 @@
         </div>
     </div>
 </div>
+    
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+
+    </ul>
+</nav>
+
+
 <div class='container' id="url-container">
     
 </div>
@@ -47,18 +55,70 @@ $(document).ready(function(){
     var userId = $('#user-id').text();
     var $urlForm = $('#url-form');
 
+
     if ( userId ) {
         get( `/api/${ userId }` ).then( function(data) {
-            setListOfUrlForCurrentUser(data)
-        }).catch( function() {
-             console.log(`status: ${status}, response: ${response}`);
+            setPagination(data);
+            setListOfUrlForCurrentUser(data);
+        }, function(error) {
+             console.log(`status: ${error.status}, response: ${error.response}`);
         });
            
     }
 
+    function bindPaginationButton(buttonNumber) {
+        var userId = $('#user-id').text();
+        var button = '#page-item-' + buttonNumber;
+        $(button).click(function() {
+            get( `/api/${ userId }/?page=${buttonNumber}` )
+                .then( function(data) {
+                    setListOfUrlForCurrentUser(data);
+                }, function(error) {
+                    console.log(`status: ${error.status}, response: ${error.response}`);
+                });
+        })
+    }
+        
+    function setPagination(data) {
+        var $paginationContainer = $('#pagination-container');
+        var dataNext = data.next;
+        var dataPrevious = data.previous;
+        var resultsLength = data.results.length;
+        var pageNumbers = Math.ceil(data.count/resultsLength);
+        if (dataNext || dataPrevious) {
+            var $pagination = $('.pagination');
+            $pagination.append (
+                `<li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                `
+                );
+                bindPaginationButton(1);
+            for (var i=1; i<=pageNumbers; i++){
+                $pagination.append (
+                    `<li class="page-item" id="page-item-${i}"><a class="page-link"  href="#">${i}</a></li>`
+                );
+                bindPaginationButton(i);
+            }
+            $pagination.append (
+                `<li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+                `
+                );
+            bindPaginationButton(pageNumbers);
+        }
+    }
+
     function setListOfUrlForCurrentUser( data ) {
+        
         var $urlContainer = $('#url-container');
-        data.forEach( (item, index) => {
+        $urlContainer.children().remove();
+        data.results.forEach( (item, index) => {
             $urlContainer.append (
                 `<div class="row justify-content-md-center url-block ">
                     <div class="col-md-7 data-url-block">
