--- a/templates/short_url/__base.html
+++ b/templates/short_url/__base.html
@@ -39,7 +39,7 @@
     </script>
 
     {% endblock javascript %}
-    <script type="text/javascript" src="{% static 'js/bitly.js' %}"></script>
+    <!-- <script type="text/javascript" src="{% static 'js/bitly.js' %}"></script> -->
 
     {% block javascript2 %}{% endblock javascript2 %}
 
