--- a/templates/short_url/short_url.html
+++ b/templates/short_url/short_url.html
@@ -36,7 +36,7 @@
 </div>
     
 <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
+    <ul class="pagination justify-content-center" id="pagination-container">
 
     </ul>
 </nav>
@@ -50,6 +50,249 @@
 {% endblock content %}
 
 {% block javascript2 %}
+<script>
+$(document).ready(function() {
+    var modelData = {
+        currentPageEndpoint: null,
 
+    };
+
+    var octopus = {
+        init: function() {
+            formView.init();
+            urlListView.init();
+        },
+
+        getUserId: function() {
+            return $('#user-id').text();
+        },
+
+        getcurrentUrlEndpoint: function() {
+            return modelData.currentPageEndpoint;
+        },
+
+        get: function( url ) {
+            return new Promise(function(resolve, reject) {
+                var reg = new XMLHttpRequest();
+                reg.open('GET', url, true);
+                reg.onload = function() {
+                    if (reg.readyState == 4 && reg.status == 200) {
+                        // console.log(reg.statusText)
+                        // console.log(reg.response)
+                        resolve(JSON.parse(reg.response));
+                    } else {
+                        console.log('reg.readyState = ',reg.readyState)
+                        console.log('reg.status = ',reg.status)
+                        reject({
+                            status: this.status,
+                            response: JSON.parse(reg.response)
+                        });
+                    }
+                };
+                reg.onerror = function() {
+                    reject(Error('Network Error'));
+                };
+                reg.send(null);
+            })
+        },
+
+        post: function( url, data ) {
+            return new Promise(function(resolve, reject) {
+                var reg = new XMLHttpRequest();
+                reg.open('POST', url, true);
+                reg.setRequestHeader('Content-type','application/json; charset=utf-8');
+                reg.setRequestHeader('X-CSRFToken', getCookie('csrftoken'));
+
+                reg.onload = function() {
+                    if (reg.readyState == 4 && reg.status == 201) {
+                        console.log(reg.statusText)
+                        console.log(reg.response)
+                        resolve({
+                            status: this.status,
+                            response: JSON.parse(reg.response)
+                        });
+                    } else {
+                        console.log('reg.readyState = ',reg.readyState)
+                        console.log('reg.status = ',reg.status)
+                        reject({
+                            status: this.status,
+                            response: JSON.parse(reg.response)
+                        });
+                    }
+                };
+                reg.onerror = function() {
+                    reject(Error('Network Error'));
+                };
+                reg.send(data);
+            })
+        },
+
+        setPagination: function(data) {
+            var $paginationContainer = $('#pagination-container');
+            $paginationContainer.children().remove();
+            var totalPages = data.total_pages;
+            if ( totalPages > 1 ) {
+                var $pagination = $('.pagination');
+                if ( data.previous ) {
+                    $pagination.append (
+                    `<li class="page-item" id="page-previous">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    `
+                    );
+                    $('#page-previous').click( function() {
+                        urlListView.render(data.previous);
+                    })
+                }
+                
+                // alert('totalPages = ',totalPages);
+                for (var i=1; i<=totalPages; i++){
+
+                    $pagination.append (
+                        `<li class="page-item" id="page-item-${i}"><a class="page-link"  href="#">${i}</a></li>`
+                    );
+                    this.bindPaginationButton(i);
+                }
+
+                if ( data.next ) {
+                    $pagination.append (
+                    `<li class="page-item" id="page-next">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                    `
+                    );
+                    $('#page-next').click( function() {
+                        urlListView.render(data.next);
+                    });
+                }
+            }
+        },
+
+        bindPaginationButton: function(buttonNumber) {
+            var userId = this.getUserId();
+            var button = '#page-item-' + buttonNumber;
+            var currentPageEndpoint = `/api/${ userId }/?page=${buttonNumber}`;
+            $(button).click(function() {
+                urlListView.render(currentPageEndpoint);
+            })
+        },
+
+        setListOfUrlForCurrentUser: function(data) {
+            var $urlContainer = $('#url-container');
+            $urlContainer.children().remove();
+            data.results.forEach( (item, index) => {
+                $urlContainer.append (
+                    `<div class="row justify-content-md-center url-block ">
+                        <div class="col-md-7 data-url-block">
+                        <time class="bitlink-item--created-date" datetime="2019-06-28">Jun 28</time>
+                            <p>${ item.created }</p>
+                            <p>${ item.long_url }</p>
+                            <p >
+                                <div class="col">
+                                    <a href="${ item.long_url }">${ item.short_url_subpart }</a>
+                                </div>                      
+                            </p>
+                        </div>
+                    </div>`
+                );
+            });
+        },
+
+        // --- Form methods ---
+        SerializeArrayToJson: function(formData) { //serialize data function
+            var data = {};
+            for (var i = 0; i < formData.length; i++){
+                data[formData[i]['name']] = formData[i]['value'];
+            }
+
+            data.user_id = this.getUserId();
+                return JSON.stringify(data)
+        },
+
+        setErrorMessagesToForm: function(error) {
+            var err = error.response;
+            $('.form-group-error').remove()
+            for ( var key in err ) {
+                newEl = $( "<small>" ,{
+                    class: 'form-group-error form-text text-danger ',
+                    text: err[ key ]
+                });
+                $('#form-group-' + key).append(newEl);
+            }
+        },
+
+        AddNewUrlPair: function(item) {
+            return new Promise(function(resolve, reject) {
+                var $urlContainer = $('#url-container');
+                $urlContainer.prepend(
+                    `<div class="row justify-content-md-center url-block animated bounceInLeft">
+                        <div class="col-md-7 data-url-block">
+                        <time class="bitlink-item--created-date" datetime="2019-06-28">Jun 28</time>
+                            <p>${ item.created }</p>
+                            <p>${ item.long_url }</p>
+                            <p><a href="${ item.long_url }">${ item.short_url_subpart }</a></p>
+                        </div>
+                    </div>`
+                );
+                setTimeout(function() {
+                    $('.url-block:first').removeClass('animated bounceInLeft');
+                }, 2000)
+            })
+        }
+    };
+
+    var formView = {
+        init: function() {
+            var urlForm = $('#url-form');
+            urlForm.submit(function(event){
+                event.preventDefault();
+                var formData = $(this).serializeArray();
+                jsonData = octopus.SerializeArrayToJson(formData);
+                var userId = $('#user-id').text();
+                console.log('jsonData = ', jsonData);
+            
+            octopus.post( '/api/', jsonData )
+                .then(function(response) {
+                    octopus.AddNewUrlPair(response.response);
+                }, function(error){
+                    octopus.setErrorMessagesToForm(error);
+                })
+                .then(function($formData) {
+                    urlForm[0].reset();
+                    console.log("All done!");
+                })
+            });
+
+        }
+    };
+
+    var urlListView = {
+        init: function() {
+            var userId = octopus.getUserId();
+            modelData.currentPageEndpoint = `/api/${ userId }/?page=1`;
+            this.render( modelData.currentPageEndpoint );
+        },
+
+        render: function( currentPageEndpoint ) {
+            octopus.get( currentPageEndpoint )
+            .then( function(data) {
+                octopus.setPagination(data);
+                octopus.setListOfUrlForCurrentUser(data);
+                }, function(error) {
+                    console.log(
+                        `status: ${error.status}, response: ${error.response}`);
+                }
+            );
+        }
+    }
+
+    octopus.init();
+})   
+
+</script>
 
 {% endblock javascript2 %}
