--- a/static/css/bitly.css
+++ b/static/css/bitly.css
@@ -1,14 +1,34 @@
 
-.form-block, .url-block{
-	margin-bottom: 1em;
+body {
+	background-color: #f4f5f7;
 }
 
-.data-url-block {
-	border: 2px solid green;
-    border-radius: .3em;
+.form-block, .url-block{
+	margin-bottom: 1em;
 }
 
 .new-url-block {
 	border: 2px solid green;
     border-radius: .3em;
 }
+
+.data-url-block , .form-block{
+	background-color: cornsilk;
+	border-radius: .5rem;
+    box-shadow: 0 0 8px 0 rgba(17,22,26,.16), 0 4px 8px 0 rgba(17,22,26,.08), 0 8px 16px 0 rgba(17,22,26,.08);
+    margin: .5rem 0;
+    overflow: hidden;
+    position: relative;
+    transition: box-shadow .3s ease-in-out;
+}
+
+.form-block{
+	padding: 1.5rem 1rem;
+}
+
+.data-url-block:hover {
+    box-shadow: 0 0 16px 0 rgba(17,22,26,.16), 0 8px 16px 0 rgba(17,22,26,.08), 0 8px 16px 0 rgba(17,22,26,.08);
+	transition: box-shadow .3s ease-in-out;
+}
+
+
